--- a/morse/index.html
+++ b/morse/index.html
@@ -9,6 +9,12 @@
     <style>
         * {
             box-sizing: border-box;
+            padding: 0;
+            margin: 0;
+        }
+        
+        body {
+            padding: 8px;
         }
         
         .content {
