--- a/comp/index.html
+++ b/comp/index.html
@@ -4,8 +4,8 @@
  * @Author       : Mickey
  * @Date         : 2022-08-17 11:07:52
  * @LastEditors  : Mickey
- * @LastEditTime : 2022-08-18 10:11:21
- * @FilePath     : \\undefinedc:\\Users\\Thinkpad\\Desktop\\新建文本文档 (16).html
+ * @LastEditTime : 2022-08-18 10:23:38
+ * @FilePath     : \\undefinedc:\\Users\\Thinkpad\\Desktop\\index.html
  * Copyright (C) 2022 Mickey. All rights reserved.
 -->
 
@@ -140,103 +140,103 @@
         let selectColor = color[0];
         const arr = [{
             name: "八荒",
-            value: 135 / 2,
+            value: 0,
             num: 2,
             price: 7481744,
         }, {
             name: "灵珠",
-            value: 3,
+            value: 0,
             num: 80,
             price: 562000,
         }, {
             name: "高残",
-            value: 28,
+            value: 0,
             num: 10,
             price: 502872,
         }, {
             name: "神兽丹",
-            value: 125,
+            value: 0,
             num: 10,
             price: 230000,
         }, {
             name: "玄元丹",
-            value: 4,
+            value: 0,
             num: 10,
             price: 0,
         }, {
             name: "荒玉",
-            value: 2,
+            value: 0,
             num: 100,
             price: 0,
         }, {
             name: "帮贡",
-            value: 4,
+            value: 0,
             num: 1,
             price: 0,
         }, {
             name: "召唤师驯养",
-            value: 2,
+            value: 0,
             num: 50,
             price: 0,
         }, {
             name: "天运石",
-            value: 3,
+            value: 0,
             num: 500,
             price: 0,
         }, {
             name: "成就",
-            value: 2,
+            value: 0,
             num: 1,
             price: 0,
         }, {
             name: "净瓶",
-            value: 3,
+            value: 0,
             num: 100,
             price: 260000,
         }, {
             name: "金柳露",
-            value: 872,
+            value: 0,
             num: 1,
             price: 100000,
         }, {
             name: "高级属性卡集",
-            value: 1,
+            value: 0,
             num: 300,
             price: 50000,
         }, {
             name: "龙之骨",
-            value: 2,
+            value: 0,
             num: 1,
             price: 20000000,
         }, {
             name: "1级五行",
-            value: 6,
+            value: 0,
             num: 1,
             price: 42000000,
         }, {
             name: "2级五行",
-            value: 1,
+            value: 0,
             num: 1,
             price: 300000000,
         }, {
             name: "聚魄",
-            value: 5,
+            value: 0,
             num: 1,
             price: 7000000,
         }, {
             name: "神兵",
-            value: 5,
+            value: 0,
             num: 1,
             price: 10000000,
         }, {
             name: "终残",
-            value: 6,
+            value: 0,
             num: 1,
             price: 8371285,
         }, {
             name: "高级",
             //-3
-            value: 10,
+            value: 0,
             num: 1,
             price: 7500000,
         }, ];
