--- a/cump/index.html
+++ b/cump/index.html
@@ -4,7 +4,7 @@
  * @Author       : Mickey
  * @Date         : 2023-10-08 14:17:59
  * @LastEditors  : Mickey
- * @LastEditTime : 2023-10-08 16:00:23
+ * @LastEditTime : 2023-10-08 16:06:32
  * @FilePath     : \\undefinedd:\\Mickeys\\MY_Github\\cump\\index.html
  * Copyright (C) 2023 Mickey. All rights reserved.
 -->
@@ -101,12 +101,13 @@
 
         .fee .feeBox {
             display: flex;
-            width: 10%!important;
+            width: 35%!important;
             margin-left: 6px;
         }
 
         .fee .feeBox span {
             line-height: 30px;
+            text-align: right;
         }
 
         .footer {
@@ -115,6 +116,7 @@
             grid: auto / 1fr;
             max-width: 800px;
             margin: auto;
+            padding: 0 10px;
         }
 
         .footer * {
@@ -178,7 +180,7 @@
         <div class="fee">
             <input id="addName"></input>
             <div class="feeBox">
-                <span>费率:</span>
+                <span>费率：</span>
                 <input id="feeInp" value="0.92"></input>
             </div>
         </div>
@@ -348,4 +350,5 @@
 
 </html>
 
+</html>
 </html>
