--- a/dh/index.html
+++ b/dh/index.html
@@ -23,6 +23,11 @@
             box-sizing: border-box;
         }
 
+        .content {
+            overflow: scroll;
+            width: 1200px;
+        }
+
         table {
             border-collapse: collapse;
         }
@@ -71,8 +76,7 @@
 </head>
 
 <body>
-    <div>
-
+    <div class="content">
         <table border="1" id="myTable">
             <tr id="th">
                 <th id="thAdd"></th>
