--- a/dh/index.html
+++ b/dh/index.html
@@ -50,8 +50,8 @@
             width: 70px;
             height: 24px;
             margin: 2px 0;
+            display: list-item;
             cursor: pointer;
-            margin: auto;
         }
 
         #total div {
