--- a/dh/index.html
+++ b/dh/index.html
@@ -24,8 +24,8 @@
         }
 
         .content {
-            overflow: scroll;
-            width: 1200px;
+            /* overflow: scroll;
+            width: 1200px; */
         }
 
         table {
