--- a/dh/index.html
+++ b/dh/index.html
@@ -103,6 +103,10 @@
             border-color: #de420a;
             color: #fff;
         }
+
+        #total {
+            width: 1200px;
+        }
     </style>
 </head>
 
